--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="components/App.js" type="module"></script>
+    <script src="./src/App.js" type="module"></script>
   </body>
 </html>
